<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/item_view_padding"
    android:tag="@string/fragment_tag_departure"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.activities.DetailActivity">

    <LinearLayout
        android:id="@+id/fragment_departures"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_departures_weekday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_label_departures_weekday" />

        <FrameLayout
            android:id="@+id/departures_weekday_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_label_departures_empty" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_departures_weekday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:scrollbars="vertical" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_departures_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_view_padding"
            android:text="@string/textview_label_departures_saturday" />

        <FrameLayout
            android:id="@+id/departures_saturday_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_label_departures_empty" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_departures_saturday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:scrollbars="vertical" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_departures_weekday_sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_view_padding"
            android:text="@string/textview_label_departures_sunday" />

        <FrameLayout
            android:id="@+id/departures_sunday_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_label_departures_empty" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_departures_sunday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:scrollbars="vertical" />

        </FrameLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
